# gta2-tm-scr-decompiler

./: README.md  compile_and_build.bat  decompile.bat  decompiler_tool.cpp  meson.build  scr_commands.h  scr_decompiler.cpp  scr_decompiler_api.h  scr_functions.h  scr_helperfuncs.h  scr_strings.h  scr_structs.h  stringfuncs.h
gui/: GUIInterface.java  compile_build.bat  execute.bat  manifest.txt
